@@ -7,6 +7,7 @@
     performing Direct Copy backups to a remote destination
   - Display tracebacks at log level ERROR instead of DEBUG when an error occurs
     during a backup or restore
+  - Add a "[successful]" backup token
   
 || Version 1.43.3rc5 changes ||
   * Thu Jul 1 2010 Stewart Adam <s.adam at diffingo.com>
